--- a/seckill-service/package.json
+++ b/seckill-service/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "dependencies": {
     "egg": "^2.2.1",
+    "egg-mysql": "^3.0.0",
     "egg-scripts": "^2.5.0",
     "kafka-node": "^2.6.1",
     "mysql": "^2.15.0",
